// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb renders markup with two items 1`] = `
<ng-ais-breadcrumb
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-Breadcrumb"
  >
    
        
    <ul
      class="ais-Breadcrumb-list"
    >
      
          
      
      <li
        class="ais-Breadcrumb-item"
      >
        
            
        
        
            
        
        <a
          class="ais-Breadcrumb-link"
          href=""
        >
          
              foo
            
        </a>
        
  
            
        
        
          
      </li>
      <li
        class="ais-Breadcrumb-item--selected"
      >
        
            
        
        <span
          aria-hidden="true"
          class="ais-Breadcrumb-separator"
        >
          
              &gt;
            
        </span>
        
            
        
        
  
            
        
        <span>
          
              bar
            
        </span>
        
          
      </li>
      
        
    </ul>
    
      
  </div>
    
</ng-ais-breadcrumb>
`;

exports[`Breadcrumb renders markup without state 1`] = `
<ng-ais-breadcrumb
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-Breadcrumb"
  >
    
        
    <ul
      class="ais-Breadcrumb-list"
    >
      
          
      
      
        
    </ul>
    
      
  </div>
    
</ng-ais-breadcrumb>
`;

exports[`Breadcrumb should be hidden with \`autoHideContainer\` 1`] = `
<ng-ais-breadcrumb
  autoHideContainer={[Function Boolean]}
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      
    
</ng-ais-breadcrumb>
`;
